2010-11-16  Jason Merrill  <jason@redhat.com>

	* g++.dg/cpp0x/defaulted20.C: New.

	* g++.dg/template/injected2.C: New.

2010-11-17  Nicola Pero  <nicola.pero@meta-innovation.com>

	* objc.dg/protocol-optional-1.m: New.
	* obj-c++.dg/protocol-optional-1.mm: New.

2010-11-16  Richard Henderson  <rth@redhat.com>

	* gcc.target/powerpc/ppc-fma-2.c: Use -ffp-contract=off.
	* gcc.target/powerpc/ppc-fma-4.c: Likewise.

2010-11-16  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/opt12.adb: New test.
	* gnat.dg/opt12_pkg.ad[sb]: New helper.

2010-11-16  Eric Botcazou  <ebotcazou@adacore.com>

	* gcc.target/rx/pack.c: New test.

2010-11-16  Francois-Xavier Coudert  <fxcoudert@gcc.gnu.org>
	    Tobias Burnus  <burnus@net-b.de>

	PR fortran/32049
	* gfortran.dg/quad_1.f90: New.
	* lib/gcc-defs.exp (gcc-set-multilib-library-path): Use also
	compiler arguments.
	* lib/gfortran.exp (gfortran_link_flags): Add libquadmath to
	library search path; call gcc-set-multilib-library-path with
	arguments such that libgfortran.spec is found.
	(gfortran_init): Add path for libgfortran.spec to GFORTRAN_UNDER_TEST.

2010-11-16  Jakub Jelinek  <jakub@redhat.com>

	PR c++/46401
	* g++.dg/warn/Wsequence-point-3.C: New test.

2010-11-16  Kai Tietz  <kai.tietz@onevision.com>

	PR preprocessor/17349
	* gcc.dg/cpp/cmdlne-C3.c: New.

2010-11-16  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/44545
	* gcc.dg/pr44545.c: New testcase.

2010-11-16  Andrey Belevantsev  <abel@ispras.ru>

	PR rtl-optimization/46366
	* gcc.target/i386/pr45352-2.c: Silence warnings by using appropriate
	casts.

2010-11-16  Richard Guenther  <rguenther@suse.de>

	* gcc.dg/tree-ssa/ssa-fre-30.c: New testcase.

2010-11-16  Richard Guenther  <rguenther@suse.de>

	PR middle-end/45172
	* gfortran.dg/gomp/pr45172.f90: New testcase.

2010-11-16  Nick Clifton  <nickc@redhat.com>

	* gcc.target/rx/pack.c: New test.

2010-11-15  Richard Henderson  <rth@redhat.com>
